# Taskboard

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
AwsTaskBoardProject/: Dockerfile  README.md  alembic.ini  cdk.json  main.py  pyproject.toml
AwsTaskBoardProject/alembic/: env.py
AwsTaskBoardProject/alembic/versions/: 0001_create_tasks_table.py
AwsTaskBoardProject/app/api/: tasks.py
AwsTaskBoardProject/app/database/: __init__.py
AwsTaskBoardProject/app/models/: user.py
AwsTaskBoardProject/tests/api/tasks/: create_task_test.py  get_tasks_test.py
app/database/: session.py
app/models/: task.py
app/schemas/: task.py
cdk/: app.py  taskboard_stack.py
infra/taskboard/: app.py  stack.py
