[tool.poetry]
name = "taskboard"
version = "0.1.0"
description = ""
authors = ["miasoegaard <mia.soegaard@Lego.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
sqlalchemy = "^2.0.48"
psycopg2-binary = "^2.9"
alembic = "^1.13"
python-dotenv = "^1.0"
aws-cdk-lib = "^2.0"
constructs = "^10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
